# llm_chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ci_cd_pipeline.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: aca-llm-chatbot-AutoDeployTrigger-16cfe729-aa0f-480d-b6e3-dce98fcf7467.yml  ci-cd.yml
k8s/production/: deployment.yaml  ingress.yaml  service.yaml
k8s/staging/: deployment.yaml  ingress.yaml  service.yaml
src/: __init__.py  config.py
src/backend/: __init__.py  api.py  auth.py  nlp.py
src/database/: __init__.py  auth.py  db.py  relationships.py
src/frontend/: __init__.py  app.py  auth.py
src/utils/: __init__.py  db_init.py  error_handlers.py  logging_config.py
tests/: conftest.py
tests/integration/: __init__.py  test_api.py
tests/performance/: __init__.py  load_test.py
tests/unit/: __init__.py  test_auth.py  test_database.py  test_nlp.py
